add extract install_profile.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "7zip-bin": "^5.2.0",
+        "node-7z": "^3.0.0",
         "node-fetch": "^2.6.7"
     }
 }
