--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "forge-fabric-downloder",
+    "name": "forge-fabric-downloader",
     "version": "0.0.0",
     "description": "",
     "main": "index.js",
