--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "license": "ISC",
     "dependencies": {
         "7zip-bin": "^5.2.0",
+        "axios": "^1.1.3",
         "node-7z": "^3.0.0",
         "node-fetch": "^2.6.7"
     }
