--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "forge-fabric-downloader",
-    "version": "1.0.0-alpha.1",
+    "name": "minecraft-loader",
+    "version": "1.0.0-beta.2",
     "description": "",
     "main": "index.js",
     "files": [
