--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "keywords": [],
     "author": "Luuxis",
-    "license": "CCANC",
+    "license": "GPL-3.0",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
