--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "minecraft-loader",
-    "version": "1.0.0",
+    "version": "1.1.4",
     "description": "",
     "exports": {
         ".": {
@@ -21,8 +21,7 @@
         "LICENSE"
     ],
     "dependencies": {
-        "7zip-bin": "^5.2.0",
-        "node-7z": "^3.0.0",
+        "adm-zip": "^0.5.10",
         "node-fetch": "^2.6.7"
     },
     "bugs": {
